# gpu_benchmarks

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: accessors.cuh  atomic_extensions.cuh  block_and_grid_sizing.cuh  containers.cuh  cooperative_minmax.cuh  extra_type_traits.cuh  gridsync.cuh  pinnedalloc.cuh  pipelines.cuh  sharedmem.cuh  transpose.cuh
include/containers/: bitset.cuh  cubwrappers.cuh  events.cuh  image.cuh  pinnedbuffer.cuh  stream_ordered_storage.cuh  streams.cuh
proj_basicops/: CMakeLists.txt  basic_stream_compaction.cu  basicops.cu  copy_ranges.cuh  cub_combine_sequence_starts_and_lengths.cu  cub_using_device_length.cu  deflate.cu  events_vs_nvtx.cu  gather_vs_custom.cu  inflate.cu  run_length_encode.cu  transpose.cu
proj_blockReductions/: CMakeLists.txt  blkreduction.cuh  blkreductions.cu  cub_ext_blkreduction.cuh
proj_containers/: CMakeLists.txt  RowWisePackedInclusiveScan.cuh  bitset_speed.cu  deviceselect.cu  events_and_streams_example.cu  forward_vs_backward_scans.cu  pinned_alloc.cu  scan_121.cu  scan_short_words.cu  sort.cu  stream_ordered_alloc.cu  stream_ordered_alloc_comparison.cu  streams.cu  test_bitset.cu  test_cubwrappers_conveniencefunctors.cu  test_cubwrappers_devicerunlengthencode.cu  test_cubwrappers_devicescan.cu  test_cubwrappers_devicesegmentedreduce.cu  test_cubwrappers_streamorderedstorage.cu  test_image.cu  test_pinnedbuffer.cu  test_stream_ordered_storage.cu
proj_cooperativegrid/: CMakeLists.txt  cooperativegridtest.cu
proj_cropping/: CMakeLists.txt  cropping.cu  cropping.cuh
proj_cudagraphs/: CMakeLists.txt  helper_cuda.h  helper_string.h  simpleCudaGraphs.cu
proj_ffts/: .gitignore  CMakeLists.txt  README.md
proj_ffts/include/: cuFFT_wrapper.cuh  cufft_utils.h
proj_ffts/py/: manual_2d_as_1ds.py
proj_ffts/src/: 1d_r2c_c2r_example.cpp  c2c_2d.cpp  cufftdx_example.cu  manual_2d_as_1ds.cpp  manual_2dpad_as_1ds.cpp  r2c_2d.cpp  thrust_example.cpp
proj_fftshift/: CMakeLists.txt  fftshift.cuh  main.cu
proj_floodfill/: CMakeLists.txt  floodfillnpp.cu
proj_fmamat/: CMakeLists.txt  fmamat.cu  fmamat.h  test_fmamat.cu
proj_grid_polynomials/: CMakeLists.txt  kernels.h  main.cu  test_basic.cu
proj_histogram/: CMakeLists.txt  hist.cu  hist.cuh  test_hist.cpp
proj_median/: CMakeLists.txt  median.cuh  medianExample.cu
proj_mempools/: CMakeLists.txt  limitedpoolsize.cu  multithread_to_stream.cu
proj_oneblock/: CMakeLists.txt
proj_oneblock/src/: deviceselect.cu  sort.cu
proj_outlierHandling/: CMakeLists.txt  outlier.cu  outlierOverwriting.cuh  outlierRemoval.cuh
proj_outlierRemoval/: CMakeLists.txt  outlierOverwriting.cuh  outlierRemoval.cu  outlierRemoval.cuh
proj_patternMatching/: CMakeLists.txt  example.py  matching.cu  patternmatching.cuh
proj_pinnedalloc/: CMakeLists.txt  thrustpinned.cu  thrustpinned.cuh
proj_reductions/: CMakeLists.txt  blkreduction.cuh  blkreductions.cu  check_nan_handling.cu  cub_vs_cg.cu  devicereduction.cu  devicereduction.cuh  thrustreduction.cu
proj_remap/: CMakeLists.txt  README.md  check_npp_edges.cu  downsample.cu  downsampling.cuh  kernels.h  main.cu  oversample.py  oversampleKernels.cuh  oversample_remap.cu  test_remap.cu
proj_rng/: CMakeLists.txt  curand_extensions.h  curandrng.cu  main.cu  thrust_extensions.h  thrustrng.cu
proj_rng/py/: cupyrng.py
proj_sats/: CMakeLists.txt  manualConv.h  sats.cu  satsimpl.cuh  satstructs.cuh  test_satconvolve.cu  test_satstructs.cu
proj_sats/py/: checkMultiFilterDiskConvolve.py  compare_against_ffts.py  sats.py
proj_selections/: CMakeLists.txt  conditioned_selections.cu  selections.cu  selectors.cuh  test_accessors.cu  test_conditioned_selections.cu
proj_slipups/: CMakeLists.txt  README.md  macro_pollution.cu  printf_in_kernels.cu  shared_memory_violations.cu
proj_sumAndDownsampleMatrix/: CMakeLists.txt  main.cu  sumAndDownsample.cuh  withArgmax.cu
proj_tridiag/: CMakeLists.txt  cpu_tridiag.h  pcr_notes.tex  splines.cu  splines.cuh  test_tridiag.cu  tridiag.cu  tridiag.cuh  validate_splines.py
proj_windowccl/: CMakeLists.txt
proj_windowccl/include/: wccl.h  wccl_direct.cuh  wccl_hybrid.cuh  wccl_kernels.cuh
proj_windowccl/py/: binaryneighbours.py  generate_cluster_data.py  hyperparambenchmark.py  readhyperparambenchmark.py  show_generated_data.py  sim.py  sim_binaryneighbours.py  sim_wccl.py  wccl.py
proj_windowccl/src/: wccl.cpp  wccl_experiment.cpp  wccl_experiment_cuda.cu  wccl_hybrid.cu
proj_windowccl/test/: test_wccl.cpp
py/: README.md  mul.py
src/: containers.cu
src/containers/: events.cu  streams.cu
test/: test_main_generic.cu
